<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- You have to use the same ids in main_navigation.xml for this to work -->

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_hint"
        app:showAsAction="always" />

    <!-- FIXME :: Get rid of -->
    <item
        android:id="@id/navigation_home"
        android:title="@string/home_title"
        app:showAsAction="never" />

    <item
        android:id="@id/navigation_downloads"
        android:title="@string/downloads_title"
        app:showAsAction="never" />

    <!-- FIXME :: Get rid of -->
    <item
        android:id="@id/navigation_auth"
        android:title="Login"
        app:showAsAction="never" />

</menu>