<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.koalatea.sedaily.feature.auth.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:mutableText="@{viewModel.getSubmissionText()}" />

        <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title"
            app:mutableHint="@{viewModel.getUsernameText()}" />

        <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/username"
            app:mutableVisibility="@{viewModel.getShowRegister()}" />

        <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginRegButton"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password"
            style="@style/Widget.AppCompat.Button.Colored"
            app:mutableText="@{viewModel.getSubmissionText()}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/loginRegButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_marginTop="30dp"
            app:mutableText="@{viewModel.getToggleText()}"
            android:onClick="@{() -> viewModel.toggleScreen()}" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:id="@+id/separator"
            android:layout_below="@+id/toggleButton"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassword"
            android:text="@string/forgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/separator"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </RelativeLayout>
</layout>